--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neural Field Simulator</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> <!-- Including Plotly JS library -->
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
             <button id="startBtn">Start Simulation</button>
         </div>
         <div id="output">
-            <canvas id="simulationCanvas"></canvas>
+            <div id="plot"></div> <!-- Div for Plotly Visualization -->
         </div>
     </main>
     <footer>
