--- a/index.html
+++ b/index.html
@@ -3,27 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neural Field Simulator</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> <!-- Including Plotly JS library -->
+    <title>Neural Field Simulation</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        #plot {
+            width: 80%;
+            margin: auto;
+        }
+        #controls {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Neural Field Simulator</h1>
-    </header>
-    <main>
-        <div id="controls">
-            <label for="connectivity">Connectivity:</label>
-            <input type="range" id="connectivity" min="0" max="1" step="0.01" value="0.5">
-            <button id="startBtn">Start Simulation</button>
-        </div>
-        <div id="output">
-            <div id="plot"></div> <!-- Div for Plotly Visualization -->
-        </div>
-    </main>
-    <footer>
-        <p>Created by Your Name</p>
-    </footer>
-    <script src="script.js"></script>
+    <h1>Neural Field Simulation</h1>
+    <div id="controls">
+        <label for="timestep">Timestep: </label>
+        <input type="number" id="timestep" value="-1">
+        <button onclick="simulate()">Run Simulation</button>
+    </div>
+    <div id="plot">
+        <img id="simulationImage" src="" alt="Simulation Result" />
+    </div>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script>
+        async function simulate() {
+            const timestep = document.getElementById('timestep').value;
+            const response = await fetch(`/simulate?timestep=${timestep}`);
+            const data = await response.json();
+            const image = document.getElementById('simulationImage');
+            image.src = 'data:image/png;base64,' + data.image;
+        }
+    </script>
 </body>
 </html>
